@@ -1,14 +1,15 @@
 <!DOCTYPE book PUBLIC "-//OASIS//DTD DocBook V4.0//EN">
 <book>
+
 <bookinfo>
 <title>General documentation for the libmemory SMR implementation</title>
 </bookinfo>
+
 <chapter>
 <title>Introduction</title>
 <para>This document briefly describes how to use the libmemory SMR 
 implementation, what it is meant for, what it is based on and what changes it
-has undergone since the beginning (which, at the time of this writing, is 
-yesterday).</para>
+has undergone since the beginning.</para>
 <para>The libmemory library is an implementation of M.M. Micheal's SMR 
 algorithm. As such, it provides replacement functions for malloc(3) and 
 free(3). Other memory management functions are not currently provided - i.e.
@@ -20,7 +21,7 @@ track of all "hazardous references" of every thread and making sure no node
 is ever freed while there is still a hazardous reference to it.</para>
 <para>The principles of using hazardous references and of using SMR for 
 memory management are described in the following chapters. A reference to the
-API functions is also provided.</para>
+API functions is provided in the libmemory manual page, libmemory(3).</para>
 <para>The libmemory library is written for POSIX-compliant platforms. The most
 notable exception to POSIX compliance (among often-used systems) is Windows.
 A Woe32-native port of this implementation is currently not available, but 
@@ -29,6 +30,7 @@ to Woe32 (using MinGW's gcc as a compiler). As some of the code is specific to
 the GNU C compiler, the library will not currently compile with any other 
 compiler</para>
 </chapter>
+
 <chapter>
 <title>Hazard Pointers and hazardous references</title>
 <para>A "hazardous" reference to a node is defined as a reference that is used
@@ -83,6 +85,7 @@ and is invariable. If different threads require a different number of hazard
 pointers, set the number of hazard pointers to the maximum amount required per
 thread.</para>
 </chapter>
+
 <chapter>
 <title>Safe Memory Reclamation</title>
 <para>This implementation does not actually manage the memory allocated through
@@ -96,7 +99,7 @@ referenced at the moment it is freed. Once of those methods is keeping a counter
 of references to the block of memory (or rather the object contained in it).
 Though that undoubtedly works, it is not always the best way that is available
 to the programmer. Another method is to clearly and carefully define "who" owns
-the memory, delegating the liberation of memory to its unique owner. That, also
+the memory, delegating the liberation of memory to its unique owner. That, also,
 is a good way of handling the problem but it requires very careful programming
 which is, alas, not always the strong point of the development team.</para>
 <para>In terms of performance, careful programming is undoubtedly the best
@@ -115,63 +118,46 @@ to be deleted. Once full, the pointers are scanned for presence in the list
 of hazard pointers. For each pointer for which a hazard pointer with the same
 value does not exist, the block of memory it points to is freed. All other
 pointers are re-queued for deletion.</para>
-<para>This logic is at the base of the only flaw I have been able to find in
-the algorithm so far. Why implement a flawed algorithm anyway? Because I do
-not currently know of a better alternative and, though I am desigining one, 
-this algorithm remains very performing and very robust - iff the size of the
-batch is will chosen.</para>
-<para>Hence, I can only emphasize that <emphasis>the size of the batch should
-be well-chosen, and definitely not too small</emphasis>. If it is too small,
-unpredictable results may occur (but if it is too large, the results may be
-that you run out of memory).</para>
-<para>A future version of this library will repair this error though that will
-probably require a completely different algorithm.</para>
+<para>The size of the batch is calculated according to the number of hazard 
+pointers per thread and the number of active threads, and is equal to the total
+number of hazard pointers plus one.</para>
 <para>Another caveat of the algorithm is that the number of participating 
 threads (or rather: the maximum number of participating threads) is a fixed
-constant as well. This constraint should also be removed from a future version
-of the library.</para>
+constant as well. In this implementation, however, the number of active threads
+is updated by the <function>smr_thread_init()</function> and 
+<function>smr_thread_fini()</function> functions, so it doesn't need to know the
+maximum number of participating threads.</para>
 </chapter>
+
 <chapter>
 <title>Using the library</title>
-<para>There are two distinct parts to the library: the part that simple handles
+<para>There are two distinct parts to the library: the part that simply handles
 memory management and the part that handles the hazard pointers. Though it may
 seem a bit useless to use the one without the other, the part for managing 
-hazard pointers does require the memory management part, but the memort 
+hazard pointers does require the memory management part, but the memory 
 management does not require the hazard pointers.</para>
 <para>As a result of this, the two parts of the library are initialized 
 separately. The main reason for this is that a future version of the library
 will provide some more "developed" ways of managing memory, which makes the 
 hazard pointers a bit less significant.</para>
+
 <section>
 <title>Initializing the library: SMR</title>
 <para>The first function to call, from the main thread, before any other thread
 calls one of the library's functions, is smr_init(). This function takes one 
-parameter, of type smr_global_data_t. This type is a structure, defined in the
-file smr.h, of which three fields are important to you: p, k and r.</para>
-<para>The p field denotes the maximum number of participating threads. This
-field is used internally to allocate a buffer when needed, on the stack. If 
-you don't know the number of threads that will be used by your application,
-take a number that is sufficiently high so that it is unlikely that the actual
-number of threads surpasses the number of threads indicated here. Beware, 
-though, not to take too high an amount either: it must be possible to allocate
-the internal buffer on the stack, without blowing up the stack. The size of
-the allocated buffer is: sizeof(void*) * p * k</para>
-<para>The k field denotes the number of hazard pointers per thread. This value
-depends only on the algorithms you use that use hazard pointers (typically
-container algorithms such as lists, heaps, etc.) and is equal to the maximum 
-number of global pointers they manipulate concurrently. It is impossible for 
-you not to know this number if you know the algorithm you're using</para>
-<para>The r field denotes the size of the per-thread batch of pointers queued
-for deletion before the scan for pointers that can safely be deleted begins.
-The value of this parameter depends on many factors, including the size of the
-blocks you allocate, the number of allocations you do per thread, etc. There
-is no way to determine this value aforehand, without good knowledge of the 
-use you will be making of this library. Be sure not to take this value too
-high - in order not to leave memory allocated for no reason too long - but 
-don't take it too low either, or you'll be scanning for hazard pointers too
-often and will have a higher chance of running into the algorithm's (only?) 
-bug.</para>
+parameter, the number of hazard pointers per thread. This value depends only on the algorithms and libraries you use that use hazard pointers (typically 
+container algorithms such as lists, heaps, etc.) and is equal to the maximum
+number of global pointers they manipulate concurrently. It is impossible for you
+not to know this number if you know the algorithm you're using. However, if you
+are writing a library that implements an algorithm using hazard pointers, I 
+(rlc) recommend storing this number in a macro definitions available through 
+any of your API header files, named for the library, suffixed by 
+<function>MIN_HPTRS</function> (i.e.: libcontain contains a macro called
+<function>LIBCONTAIN_MIN_HPTRS</function> for this purpose). Someone that 
+uses your library and libmemory can then initialize libmemory with an integer
+that is at least as large as your library needs it to be.</para>
 </section>
+
 <section>
 <title>Initializing the library: HPTR</title>
 <para>The second function to call, if you're going to use the hazard pointers,
@@ -179,13 +165,14 @@ is hptr_init(). It is declared in hptr.h and takes no parameters.</para>
 <para>This function should be called before using any of the hptr functions,
 as it initializes the global data of the hptr implementation.</para>
 </section>
+
 <section>
 <title>Per-thread initialization and finalization</title>
 <para>Every thread must start by calling smr_thread_init() and finish by calling
 smr_thread_fini() (unless the thread is cancelled or exited through 
 pthread_exit()).</para>
-<para>The first of these two functions currently doesn't do anything, but may
-start doing something important without prior notice in a future version.</para>
+<para>The fist of these two functions updates the number of active threads used
+to allocate the batches.</para>
 <para>The second function will do a sweep if all pointers queued for deletion,
 and will keep sweeping until all memory has been freed. The function does not
 currently clear hazardous references in the current thread (even though they
@@ -193,6 +180,7 @@ should not exist at the point smr_thread_fini() is called). Keeping hazardous
 references around for nothing is a bug and should be fixed in your program.
 </para>
 </section>
+
 <section>
 <title>Allocating and freeing memory</title>
 <para>The library provides replacement functions for malloc(3) and free(3), but
@@ -211,7 +199,7 @@ sections of code where the pointer in question may be used.</para>
 <para>The only purpose of the malloc(3) replacement (at the moment) is to fix
 a common bug in the implementation of malloc(3) in many CRTs: calling malloc(3)
 to allocate a block of size 0 should return a valid, non-NULL, unique pointer.
-Though in most situation it is a bug to try to allocate a block of zero bytes,
+Though in most situations it is a bug to try to allocate a block of zero bytes,
 that is not the case in all situations, so malloc(3) should suport it.</para>
 <para>The smr.h header file provides macros to replace the free(3) and malloc(3)
 functions. If you define SMR_NO_REPLACE before you include this file, the macros
@@ -223,12 +211,12 @@ of the ANSI-C (C89) equivalents. Note, though, that calling smr_free() on NULL
 does occupy a place in the queue for pointers to be deleted. You can use this
 side-effect to force the scan/sweep to take place earlier - but it is 
 ill-advised to do so (i.e. if you find yourself needing to call smr_free(NULL)
-you're likely to have a problem with the parameters you used to initialize the
-library)</para>
+you're likely to have a problem with the way you use this library)</para>
 <para>Also note that some implementations of free(3) exhibit undefined 
 behaviour if passed NULL. This implementation implicitly fixes that behaviour,
 though it is not one of its goals.</para>
 </section>
+
 <section>
 <title>When to use this library</title>
 <para>The primary goal of this library is to be used with the Container library
@@ -252,24 +240,36 @@ queued for liberation.</para>
 need this library.</para>
 </section>
 </chapter>
+
 <chapter>
 <title>History</title>
-<para>This document was finished on Wednesday, February 25, in my spare time.
-I happen o have a lot of spare time at the moment because we just moved to 
-canada and I'm staying at home to take care of our four-month-old baby. Hence,
-while one computer is compiling <ulink url="http://cygwin.com">Cygwin</ulink>,
-I'm finishing the libmemory implementation and documentation on my 
-<ulink url="http://gentoo.org">Gentoo</ulink> box, on which I do most of
-my development.</para>
+<para>A first draft of this document was finished on Wednesday, February 25,
+in my spare time. I happen o have a lot of spare time at the moment because we
+just moved to Canada and I'm staying at home to take care of our four-month-old
+baby. Hence, while one computer is compiling 
+<ulink url="http://cygwin.com">Cygwin</ulink>, I'm finishing the libmemory
+implementation and documentation on my <ulink url="http://gentoo.org">Gentoo
+</ulink> box, on which I do most of my development.</para>
+<para>On Tuesday, April 27, I started integrating this library into the 
+libcontain library. Some changes have been made to the library to make it
+somewhat easier to use (i.e. you no longer need to provide the maximum number
+of participating threads and the batch size) but most of the implementation
+has remaine the same. The manpage was written and this documentation was
+duely updated two days later, on Thursday, April 29.</para>
 <para>The reason I wrote this library is primarily for fun. The reason I made
 it available to you is in the hopes that it will be of some use to you. If not,
 don't use it.</para>
 </chapter>
+
 <chapter>
 <title>Acknowledgements and references</title>
 <para>The library is an implementation of M.M. Micheal's Safe Memory 
 Reclamation algorithm, described in detail in his article "Safe Memory 
 Reclamation for Dynamic Lock-Free Objects Using Atomic Reads and Writes", 
-publised in PODC 2002, July 21-24, 2002, Monterey California, USA</para>
+publised in PODC 2002, July 21-24, 2002, Monterey California, USA. Some 
+modifications were made to the algorithm to allow it to be used without knowing
+the maximum number of participating threads, but those changes are rather 
+minor in the scope of the entire algorithm.</para>
 </chapter>
+
 </book>
